--- a/content/publication/2023_lsap/cite.bib
+++ b/content/publication/2023_lsap/cite.bib
@@ -1,6 +1,6 @@
-@article{cao2023decreases,
-  title={What Decreases Editing Capability? Domain-Specific Hybrid Refinement for Improved GAN Inversion},
+@article{cao2022lsap,
+  title={Lsap: Rethinking inversion fidelity, perception and editability in gan latent space},
   author={Cao, Pu and Yang, Lu and Liu, Dongxu and Liu, Zhiwei and Li, Shan and Song, Qing},
-  journal={arXiv preprint arXiv:2301.12141},
-  year={2023}
+  journal={arXiv preprint arXiv:2209.12746},
+  year={2022}
 }
