--- a/content/publication/2023_concept/cite.bib
+++ b/content/publication/2023_concept/cite.bib
@@ -1,8 +1,8 @@
-@misc{cao2023conceptcentric,
-      title={Concept-centric Personalization with Large-scale Diffusion Priors},
-      author={Pu Cao and Lu Yang and Feng Zhou and Tianrui Huang and Qing Song},
-      year={2023},
-      eprint={2312.08195},
-      archivePrefix={arXiv},
-      primaryClass={cs.CV}
+@InProceedings{Cao_2025_CVPR,
+    author    = {Cao, Pu and Zhou, Feng and Yang, Lu and Huang, Tianrui and Song, Qing},
+    title     = {Image is All You Need to Empower Large-scale Diffusion Models for In-Domain Generation},
+    booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+    month     = {June},
+    year      = {2025},
+    pages     = {18358-18368}
 }
