--- a/content/publication/2024_e4c/cite.bib
+++ b/content/publication/2024_e4c/cite.bib
@@ -1,6 +1,7 @@
-@article{huang2024e4c,
+@article{huang2025e4c,
   title={E4C: Enhance Editability for Text-Based Image Editing by Harnessing Efficient CLIP Guidance},
   author={Huang, Tianrui and Cao, Pu and Yang, Lu and Liu, Chun and Hu, Mengjie and Liu, Zhiwei and Song, Qing},
-  journal={arXiv preprint arXiv:2403.10133},
-  year={2024}
+  journal={IEEE Transactions on Circuits and Systems for Video Technology},
+  year={2025},
+  publisher={IEEE}
 }
